--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/yjisme/bless-server.duyi.com#readme",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "html-entities": "^1.3.1",
     "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.2.0",
     "log4js": "^6.3.0",
     "mongoose": "^5.11.7"
   },
