--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "ali-oss": "^6.12.0",
     "html-entities": "^1.3.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
